# ai-singing

./: .env.example  .gitignore  .gitmodules  GUIDE.md  README.md  pyproject.toml  requirements-local.txt  setup.bat
docs/: current_workspace_status.md  decisions.md  iphone_recording_setup.md  male_voice_data_collection.md  male_voice_recording_total_guide.md  new_computer_setup.md  other_computer_run_guide.md  recording_key_points.md
scripts/: infer.bat  resolve_python.bat  setup_server.sh  start_app_server.sh  start_svc.bat  start_svc_server.sh  start_svc_tunnel.ps1  start_webui.bat  stop_app_server.sh  stop_svc_server.sh  stop_svc_tunnel.ps1  train.bat  train_server.sh
tools/: fix_torch_windows.py  patch_seed_vc.py  prepare_seed_vc_requirements.py  preprocess_audio.py  restore_seed_vc.py  ssh_tunnel.py
vocal_separation/: README.md  common.py  download_models.py  separate.py
